--- a/assets/scss/event-page.scss
+++ b/assets/scss/event-page.scss
@@ -2,7 +2,8 @@
     position: relative;
     top: 0px;
     width: 38%;
-    min-width: 400px;
+    // min-width: 400px;
+    min-width: 360px;
     margin: auto;
     div {
         position: relative;
