--- a/assets/css/notice.css
+++ b/assets/css/notice.css
@@ -1,1 +1,59 @@
-#notices{width:70%;top:5%;left:18%;flex-direction:row;flex-wrap:wrap}#notices,#notices .notice{position:relative;display:flex}#notices .notice{width:200px;margin:10px;flex-direction:column;background-color:hsla(0,6%,85%,.651)}#notices .notice div{margin:5px;padding:0 5px;position:relative}#notices .notice .head{display:flex;flex-direction:row;justify-content:space-between;background-color:hsla(0,0%,75%,.609);transition:all .4s}#notices .notice .head:hover{background-color:#000;color:#fff}#notices .notice .head:hover img{transition:all .5s;border:2px solid #03faee}#notices .notice .content-area{display:flex;justify-content:center;align-content:center}#notices .notice .name{text-align:center}#notices .notice .footer{display:flex;flex-direction:row;justify-content:space-between;flex-wrap:wrap;position:relative}#notices .notice .footer div{display:flex;flex-wrap:wrap;flex-direction:column;justify-content:flex-start!important;align-content:center!important}#notices .notice .footer div a,#notices .notice .footer div span{text-align:center}#notices .notice .footer div .download{opacity:.7}#notices .notice .footer div .download:hover{opacity:1}#notices .notice .caption{max-width:95%}
+#notices {
+  position: relative;
+  width: 70%;
+  top: 5%;
+  left: 18%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+  #notices .notice {
+    width: 200px;
+    display: flex;
+    margin: 10px;
+    flex-direction: column;
+    background-color: rgba(218, 213, 213, 0.651);
+    position: relative; }
+    #notices .notice div {
+      margin: 5px;
+      padding: 0px 5px 0px 5px;
+      position: relative; }
+    #notices .notice .head {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      background-color: rgba(192, 192, 192, 0.609);
+      transition: all 0.4s; }
+      #notices .notice .head:hover {
+        background-color: black;
+        color: white; }
+        #notices .notice .head:hover img {
+          transition: all 0.5s;
+          border: 2px solid #03faee; }
+    #notices .notice .content-area {
+      display: flex;
+      justify-content: center;
+      align-content: center; }
+    #notices .notice .name {
+      text-align: center; }
+    #notices .notice .footer {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      position: relative; }
+      #notices .notice .footer div {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: flex-start !important;
+        align-content: center !important; }
+        #notices .notice .footer div span {
+          text-align: center; }
+        #notices .notice .footer div a {
+          text-align: center; }
+        #notices .notice .footer div .download {
+          opacity: 0.7; }
+          #notices .notice .footer div .download:hover {
+            opacity: 1; }
+    #notices .notice .caption {
+      max-width: 95%; }
