--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -1,16 +1,58 @@
 <link rel="stylesheet" href="<%=assetPath('css/requests.css')%>" />
 
 <div id="requests-container">
-    <div>
+    <div></div>
+
+    <div style="width: 100%">
         <div class="request-header">
-            <div id="send-header" type="send" class="header" onClick="toggleHead('send-header')">
-                Requested
-            </div>
-            <div id="coming-header" type="coming" class="header" onClick="toggleHead('coming-header')">
-                Coming Req
-            </div>
+            <div style="width: 100%" id="member-header">Membership</div>
         </div>
-        <div class="coming all">
+        <div style="
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+      ">
+            <%if(locals.myProfile.related.members.length==0){%>
+                <div style="color: red; text-align: center; padding: 15px">
+                    No Member found
+                </div>
+                <%}%>
+                    <%for(let u of locals.myProfile.related.members){%>
+                        <div style="
+          width: 100%;
+          display: flex;
+          flex-direction: row !important;
+          justify-content: space-between !important;
+          align-items: space-between !important;
+        ">
+                            <div>
+                                <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
+                                    <div class="add-on-hover">
+                                        <div>
+                                            <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
+                                        </div>
+                                        <div style="display: flex; flex-direction: column">
+                                            <span><%=u.name%></span>
+                                            <span style="font-size: 13"><%=u.onModel%></span>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div>
+                                <a class="request-link" href="/user/remove-membership?target=<%=u.id%>"><button>Remove</button></a
+          >
+        </div>
+      </div>
+      <%}%>
+    </div>
+  </div>
+</div>
+
+<script src="<%=assetPath('js/requests.js')%>"></script>
+
+<!-- coming all -->
+<!-- <div class="coming all">
             <%if(locals.myProfile.related.comingRequest.length==0){%>
                 <div style="color: red; text-align: center; padding: 15px">
                     No Coming request found
@@ -32,9 +74,9 @@
                                         </div>
                                         <div>
                                 </a>
-                                </div>
-                                <div>
-                                    <a class="request-link" href="/user/accept-request?target=<%=u.id%>"><button>Accept</button></a
+                            </div>
+                            <div>
+                                <a class="request-link" href="/user/accept-request?target=<%=u.id%>"><button>Accept</button></a
           >
           <a href="/user/ignore-request?target=<%=u.id%>" class="request-link"
             ><button>Ignore</button></a
@@ -42,94 +84,54 @@
           </div>
           </div>
            <%}%>
-        </div>
-     <div class="send all"
-> 
-      <%if(locals.myProfile.related.sendRequest.length==0){%>
-      <div
+        </div> -->
+
+<!-- sending al -->
+<!-- 
         
-        style="color: red; text-align: center; padding: 15px"
-      >
-        No send request found
-      </div>
-      <%}%>
-      
-      <%for(let u of locals.myProfile.related.sendRequest){%>
-                                <div style=" width: 100%;  display: flex;  flex-direction: row !important; justify-content: space-between !important; align-items: space-between !important;">
-
-      <div >
-        <a
-          href="/user/profile?user_id=<%=u.id%>"
-          style="text-decoration: none; color: black"
-        >
-          <div class="add-on-hover">
-            <div>
-              <img
-                src="<%=u.pic%>"
-                alt="pic"
-                height="50px"
-                width="50px"
-                style="border-radius: 50%"
-              />
-            </div>
-            <div style="display: flex; flex-direction: column">
-              <span><%=u.name%></span>
-              <span style="font-size: 13"><%=u.onModel%></span>
-            </div>
-          </div>
-        </a>
-                                </div>
-                                <div>
-                                    <a class="request-link" href="/user/withdraw-request?target=<%=u.id%>"><button>Withdraw</button></a
+        <div class="send all">
+            <%if(locals.myProfile.related.sendRequest.length==0){%>
+                <div style="color: red; text-align: center; padding: 15px">
+                    No send request found
+                </div>
+                <%}%>
+                    <%for(let u of locals.myProfile.related.sendRequest){%>
+                        <div style="
+          width: 100%;
+          display: flex;
+          flex-direction: row !important;
+          justify-content: space-between !important;
+          align-items: space-between !important;
+        ">
+                            <div>
+                                <a href="/user/profile?user_id=<%=u.id%>" style="text-decoration: none; color: black">
+                                    <div class="add-on-hover">
+                                        <div>
+                                            <img src="<%=u.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
+                                        </div>
+                                        <div style="display: flex; flex-direction: column">
+                                            <span><%=u.name%></span>
+                                            <span style="font-size: 13"><%=u.onModel%></span>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div>
+                                <a class="request-link" href="/user/withdraw-request?target=<%=u.id%>"><button>Withdraw</button></a
           >
         </div>
       </div>
       <%}%>
-    </div>
-    </div>
- 
-  <div style="width: 100%;">
-    <div class="request-header">
-      <div style="width: 100%" id="member-header">Membership</div>
-    </div>
-    <div style="display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;">
-      <%if(locals.myProfile.related.members.length==0){%>
-      <div style="color: red; text-align: center; padding: 15px">
-        No Member found
-      </div>
-      <%}%> <%for(let u of locals.myProfile.related.members){%>
-      <div style=" width: 100%;  display: flex;  flex-direction: row !important; justify-content: space-between !important; align-items: space-between !important;">
-        <div>
-        <a
-          href="/user/profile?user_id=<%=u.id%>"
-          style="text-decoration: none; color: black;"
-        >
-          <div class="add-on-hover">
-            <div>
-              <img
-                src="<%=u.pic%>"
-                alt="pic"
-                height="50px"
-                width="50px"
-                style="border-radius: 50%"
-              />
-            </div>
-            <div style="display: flex; flex-direction: column">
-              <span><%=u.name%></span>
-              <span style="font-size: 13"><%=u.onModel%></span>
-            </div>
-          </div>
-        </a>
-                                </div>
-                                <div>
-                                    <a class="request-link" href="/user/remove-membership?target=<%=u.id%>"><button>Remove</button></a
-          >
-        </div>
-        </div>
-        <%}%>
-      
-    </div>
-  </div>
-</div>
+    </div> -->
 
-<script src="<%=assetPath('js/requests.js')%>"></script>
+<!-- header -->
+<!-- 
+
+  <div class="request-header">
+            <div id="send-header" type="send" class="header" onClick="toggleHead('send-header')">
+                Requested
+            </div>
+            <div id="coming-header" type="coming" class="header" onClick="toggleHead('coming-header')">
+                Coming Req
+            </div>
+        </div> -->
